# workspace-fabric

./: .editorconfig  .gitignore  AGENTS.md  BUNDLE_MANIFEST.md  CHANGELOG.md  CONTRIBUTING.md  MILESTONE_4.1_COMPLETE.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST_v0.3.0.md  RELEASE_CHECKLIST_v0.4.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  pyproject.toml
.codex/: config.toml
.tmp/milestone-4.4-validation/wheelhouse/: workspace_fabric_core-0.3.0-py3-none-any.whl  workspace_fabric_driver_api-1.0.0-py3-none-any.whl  workspace_fabric_driver_mock-1.0.0-py3-none-any.whl  workspace_fabric_driver_orei_uhd808-1.0.0-py3-none-any.whl  (+1 more)
ai/: PROJECT_BRIEF.md  architecture-summary.md  coding-guidelines.md  driver_api.md  implementation-roadmap.md  project.md
ai/implementation/: milestone-4.1-audit.md  milestone-4.2-package-structure.md  milestone-4.3-versioned-driver-api.md  milestone-4.4-installed-driver-discovery.md  milestone-4.5-driver-metadata-and-catalog.md  milestone-4.6-driver-migration.md  milestone-4.7-lifecycle-and-compatibility.md  milestone-4.8-physical-regression.md  phase-4-implementation-checklist.md  phase-4.2-defect-fix-core-scaffold.md  phase-4.2-final-verification.md  phase-5-implementation-checklist.md
ai/tasks/: README.md  hardware-command-reference-extraction.md  hardware-driver-documentation.md  hardware-driver-implementation.md
design/decisions/: 0001-project-language.md  0002-driver-architecture.md
docs/: architecture.md  capability-model.md  configuration-model.md  developer-standards.md  driver-contract.md  glossary.md  phase-2-foundation.md  phase-3-hardware-drivers.md  phase-4-api-and-client-app.md  philosophy.md  reference-platform.md  repository-skeleton.md  resource-model.md  roadmap.md  transaction-model.md  vision.md
docs/architecture/: configuration-authoring.md
docs/design/: architecture-capture-2026-07.md
docs/future/: config-authoring.md
docs/hardware/: orei-uhd808.md  orei-ukm404.md  physical-smoke-test.md  safety-and-recovery.md
docs/hardware/orei-uhd-808/: command-reference.md  (+3 more)
docs/phases/: phase-1-architecture.md  phase-2-foundation.md  phase-3-hardware-drivers.md  phase-4-modular-driver-platform.md  phase-5-relationship-oriented-control-plane  phase-6-configuration-experience.md  phase-6-core-interfaces.md  phase-6-review.md  phase-7-configuration-experience.md  phase-8-productization.md
docs/planning/: README.md  architectural-considerations.md  backlog.md  release-strategy.md
docs/vision/: configuration-experience.md
examples/: local-workspace.yaml  physical-local.yaml
examples/lab/: physical-lab.seed.yaml
tests/: test_smoke.py
tests/cli/: test_cli.py
tests/config/: test_loader.py
tests/core/: test_capability_validation.py  test_resource_graph.py  test_transaction_executor.py  test_transaction_planner.py
tests/drivers/: test_driver_api_versioning.py  test_driver_catalog.py  test_driver_contract.py  test_driver_discovery.py  test_driver_factory.py  test_driver_lifecycle.py  test_driver_migration.py  test_mock_drivers.py  test_orei_uhd808.py  test_orei_ukm404.py
tests/physical/: test_physical_smoke.py
(+45 files in other folders)
