[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-fabric"
version = "0.0.1"
description = "Software-defined workspace infrastructure for dynamically connecting physical and virtual resources."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
authors = [{ name = "Brad Richins" }]
dependencies = [
    "PyYAML>=6.0.3",
    "pyserial>=3.5",
    "workspace-fabric-driver-api>=1.0.0",
]

[project.scripts]
workspace-fabric = "workspace_fabric.cli:main"

[project.optional-dependencies]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.pytest.ini_options]
pythonpath = [
    "src",
    "packages/driver-api/src",
    "packages/driver-mock/src",
    "packages/driver-orei-uhd808/src",
    "packages/driver-orei-ukm404/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = [
    "src",
    "tests",
    "packages/driver-api/src",
    "packages/driver-api/tests",
    "packages/driver-mock/src",
    "packages/driver-mock/tests",
    "packages/driver-orei-uhd808/src",
    "packages/driver-orei-uhd808/tests",
    "packages/driver-orei-ukm404/src",
    "packages/driver-orei-ukm404/tests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
